--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-filter": "^5.0.0",
+    "gulp-htmlmin": "^3.0.0",
+    "gulp-minify-css": "^1.2.4",
     "gulp-pug": "^3.2.0",
     "gulp-pug-inheritance": "^0.2.1",
     "gulp-requirejs-optimize": "^1.2.0",
