--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "tests"
   ],
   "dependencies": {
+    "html5-boilerplate": "^5.3.0",
     "bootstrap": "^3.3.7",
     "normalize-css": "^5.0.0",
     "requirejs": "^2.3.3",
