--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "codesource",
-  "version": "1.0.0",
-  "description": "codesource is front-end reference site created by ar-to and philosophyanddesign.com",
+  "version": "0.1.2",
+  "description": "codesource is a reference for developing a single page app in stages by ar-to and philosophyanddesign.com",
   "main": "index.js",
   "scripts": {
+    "start": "gulp build",
+    "serve": "gulp serve",
+    "http": "http-server",
+    "clean": "gulp clean-all",
     "test": "echo \"Error: no test specified\" && exit 1",
     "rjs": "r.js -o ./tools/rjs.build.js",
     "gsass": "gulp watchsass",
@@ -18,20 +22,26 @@
   "author": "ar-to",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.18.8",
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-cache": "^0.4.6",
+    "gulp-cssnano": "^2.1.2",
     "gulp-filter": "^5.0.0",
-    "gulp-htmlmin": "^3.0.0",
-    "gulp-minify-css": "^1.2.4",
+    "gulp-imagemin": "^3.2.0",
     "gulp-pug": "^3.2.0",
     "gulp-pug-inheritance": "^0.2.1",
     "gulp-requirejs-optimize": "^1.2.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.1",
     "gulp-uglify": "^2.0.1",
+    "gulp-useref": "^3.1.2",
+    "http-server": "^0.10.0",
     "modernizr": "^3.3.1",
     "pug": "^2.0.0-beta11",
     "pump": "^1.0.2",
-    "requirejs": "^2.3.3"
+    "requirejs": "^2.3.3",
+    "run-sequence": "^1.2.2"
   }
 }
